plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.10'
}

java {
    sourceCompatibility = '17'
    targetCompatibility = '17'
}

javafx {
    version = "17"
    modules = ['javafx.controls', 'javafx.graphics', 'javafx.fxml', 'javafx.web', 'javafx.swing']
}


repositories {
    maven { url 'https://maven.aliyun.com/repository/public/' }
    maven { url 'https://jitpack.io' }
    mavenCentral()
}

dependencies {
    implementation 'com.google.guava:guava:32.1.2-jre'
    implementation "${jmonkeyengineGroup}:jme3-core:${jmonkeyengineVersion}"
    implementation "${jmonkeyengineGroup}:jme3-lwjgl:${jmonkeyengineVersion}"
    implementation "${jmonkeyengineGroup}:jme3-android:${jmonkeyengineVersion}"
    implementation 'cn.hutool:hutool-core:5.8.16'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.0'

    implementation project(':fool-core')
    implementation project(':fool-jme')


    compileOnly 'org.projectlombok:lombok:1.18.26'
    annotationProcessor 'org.projectlombok:lombok:1.18.26'
}

application {
    mainClass = 'com.ooqn.assist.App'
}
